@@ -19,7 +19,6 @@ package org.photonvision.vision.pipeline;
 
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 import org.photonvision.common.configuration.NeuralNetworkModelManager;
 import org.photonvision.vision.frame.Frame;
 import org.photonvision.vision.frame.FrameThresholdType;
@@ -56,11 +55,11 @@ public class ObjectDetectionPipeline
 
     @Override
     protected void setPipeParamsImpl() {
-        var params = new ObjectDetectionPipeParams();
-        params.confidence = settings.confidence;
-        params.nms = settings.nms;
         Optional<Model> selectedModel =
-                NeuralNetworkModelManager.getInstance().getModel(settings.model);
+                settings.model != null
+                        ? NeuralNetworkModelManager.getInstance()
+                                .getModel(settings.model.modelPath().toString())
+                        : Optional.empty();
 
         // If the desired model couldn't be found, log an error and try to use the default model
         if (selectedModel.isEmpty()) {
@@ -71,10 +70,8 @@ public class ObjectDetectionPipeline
         if (selectedModel.isEmpty()) {
             selectedModel = Optional.of(NullModel.getInstance());
         }
-
-        params.model = selectedModel.get();
-
-        objectDetectorPipe.setParams(params);
+        objectDetectorPipe.setParams(
+                new ObjectDetectionPipeParams(settings.confidence, settings.nms, selectedModel.get()));
 
         DualOffsetValues dualOffsetValues =
                 new DualOffsetValues(
@@ -83,30 +80,27 @@ public class ObjectDetectionPipeline
                         settings.offsetDualPointB,
                         settings.offsetDualPointBArea);
 
-        SortContoursPipe.SortContoursParams sortContoursParams =
+        sortContoursPipe.setParams(
                 new SortContoursPipe.SortContoursParams(
                         settings.contourSortMode,
                         settings.outputShowMultipleTargets ? MAX_MULTI_TARGET_RESULTS : 1,
-                        frameStaticProperties);
-        sortContoursPipe.setParams(sortContoursParams);
+                        frameStaticProperties));
 
-        var filterContoursParams =
+        filterContoursPipe.setParams(
                 new FilterObjectDetectionsPipe.FilterContoursParams(
                         settings.contourArea,
                         settings.contourRatio,
                         frameStaticProperties,
-                        settings.contourTargetOrientation == TargetOrientation.Landscape);
-        filterContoursPipe.setParams(filterContoursParams);
+                        settings.contourTargetOrientation == TargetOrientation.Landscape));
 
-        Collect2dTargetsPipe.Collect2dTargetsParams collect2dTargetsParams =
+        collect2dTargetsPipe.setParams(
                 new Collect2dTargetsPipe.Collect2dTargetsParams(
                         settings.offsetRobotOffsetMode,
                         settings.offsetSinglePoint,
                         dualOffsetValues,
                         settings.contourTargetOffsetPointEdge,
                         settings.contourTargetOrientation,
-                        frameStaticProperties);
-        collect2dTargetsPipe.setParams(collect2dTargetsParams);
+                        frameStaticProperties));
     }
 
     @Override
@@ -130,9 +124,7 @@ public class ObjectDetectionPipeline
 
         CVPipeResult<List<PotentialTarget>> sortContoursResult =
                 sortContoursPipe.run(
-                        filterContoursResult.output.stream()
-                                .map(shape -> new PotentialTarget(shape))
-                                .collect(Collectors.toList()));
+                        filterContoursResult.output.stream().map(shape -> new PotentialTarget(shape)).toList());
         sumPipeNanosElapsed += sortContoursResult.nanosElapsed;
 
         CVPipeResult<List<TrackedTarget>> collect2dTargetsResult =
